--- a/shop/src/main/webapp/resources/assets/css/join.css
+++ b/shop/src/main/webapp/resources/assets/css/join.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 .HY_a{color:black; font-size:35px;}
 .HY_a:hover{text-decoration:none; color:black; opacity:0.7; transition: 0.3s;}
-.join_line{margin:0 auto; height:1050px; width:630px; margin-top:20px; border:1px solid #eaeaea; border-radius:10px;}
+.join_line{margin:0 auto; height:890px; width:630px; margin-top:20px; border:1px solid #eaeaea; border-radius:10px; margin-bottom:60px;}
 legend{font-size:17pt; font-weight:bold; text-align:center;}
 fieldset{margin:0 auto}
-form{height:890px; width:550px; background:white; margin:0 auto; margin-top:30px;}
+form{height:825px; width:550px; background:white; margin:0 auto; margin-top:30px;}
 .HY_label{display:inline-block; font-weight:bold; margin:19px 0 5px 0; font-size:10.5pt; color:#797979;}
 .who{font-size:14.5px;}
 .HY_input[type=text],#pass{text-indent:7px; border:none; border-bottom:1px solid silver;}
@@ -21,7 +21,7 @@ form{height:890px; width:550px; background:white; margin:0 auto; margin-top:30px
 					cursor:pointer;
 				}
 .HY_input[type=button]:hover{opacity:0.7; border-radius:15px; transition: 0.3s;}
-.HY_input:focus{background:black; border-bottom:1px solid gray;opacity:0.7; transition: 0.5s;}
+.HY_input:focus{background:black; border-bottom:1px solid gray;opacity:0.7; transition: 0.5s; color:white;}
 #id,#pass,#address,#phone,#name,#business_no,#nickname{height:30px; width:99%;}
 #month,#gender{border:1px solid #eaeaea; color:gray}
 #year,#month,#day{height:30px; width:32.4%}
